--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "cross-env": "^7.0.3",
     "electron": "^17.0.1",
     "electron-is-dev": "^2.0.0",
+    "express": "^4.17.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
