--- a/package.json
+++ b/package.json
@@ -7,16 +7,22 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.19.1",
     "concurrently": "^7.0.0",
+    "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "docxtemplater": "^3.29.0",
     "electron": "^17.0.1",
     "electron-is-dev": "^2.0.0",
     "express": "^4.17.2",
+    "pizzip": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
+    "util": "^0.12.4",
     "wait-on": "^6.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "main": "public/main.js",
   "homepage": "./",
@@ -46,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "electron-rebuild": "^3.2.7"
   }
 }
