--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@electron/remote": "^2.0.4",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.5.1",
+    "@mui/material": "^5.5.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
@@ -17,6 +21,7 @@
     "electron": "^17.0.1",
     "electron-is-dev": "^2.0.0",
     "express": "^4.17.2",
+    "parsin": "^1.0.6",
     "pizzip": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -31,7 +36,7 @@
   "homepage": "./",
   "scripts": {
     "start": "react-scripts start",
-    "start-server" : "node test-server.js",
+    "start-server": "node test-server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
